css/global.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans);

body{
    font-family: 'Open Sans', sans-serif;
}

div a, div a:hover, div a:checked{
    color: white;
    text-decoration: none;
}

.headerbar{
    text-align: center;
    color: white;
    padding-bottom: 1%;
}

.headerbar h1{
    font-size: 50px;
    font-weight: bolder;
    padding-top: 7%;
    padding-bottom: 1%;
}

.headerbar h3{
    font-size: 25px;
    font-weight: 250;
}

.row.menu{
    color: white;
    margin-bottom: 5%;
}

.menu a{
    text-align: center;
    padding: 1%;
}

.menu a:hover{
    color: wheat;
}

.menu a.about{
    background-color: #ee4540;
}

.menu a.gd{
    background-color: #c72c41;
}

.menu a.media{
    background-color: #801336;
}

.menu a.gad{
    background-color: #510a32;
}

.menu a.illus{
    background-color: #2d142c;
}

.menu a.contact{
    background-color: #170816;
}

.not-active {
  pointer-events: none;
  cursor: default;
}

footer {
    margin-top: 3%;
	background-color:#f3f5f8;
	padding:40px 0 30px;
    display: block;
    color: #808080;
}

footer a {
	color:#a1a9b0;
}

footer a:hover {
	color: #ee4540;
}

